# travisbuildtest

./: .gitignore  CMakeLists.txt  README.md  travis.yml
src/: logic.hpp  main.cpp
tests/: main.cpp
